# NetMan

./: .gitignore  package-lock.json
.github/workflows/: release.yml
client/: index.html  package-lock.json  package.json  tmp_grep.txt
client/src/: main.ts  styles.css
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/src/: lib.rs
server/: Cargo.toml  cargo_error.txt  check_out.txt  errors.txt
server/src/: file_manager.rs  main.rs
