[package]
name = "netman-server"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
base64 = "0.22.1"
enigo = "0.6.1"
futures-util = "0.3.32"
image = "0.25.10"
portable-pty = "0.9.0"
rand = "0.10.0"
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
tokio-util = "0.7"
tokio-tungstenite = "0.29.0"
uuid = { version = "1.22.0", features = ["v4"] }
xcap = "0.9.1"
sysinfo = "0.33.1"
arboard = "3.4.1"
trash = { version = "5.2.1", features = ["coinit_multithreaded"] }
open = "5.3.0"
